force-app/main/default/objects/phsCheckInConversation__c/phsCheckInConversation__c.object-meta.xml
<CustomObject>
    <description>This object will hold check-in questions for Coach</description>
    <label>phsCheckInConversation</label>
    <nameField>
        <label>phsCheckInConversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsCheckInConversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>