force-app/main/default/objects/phsCheckInConversation__c/fields/Answer_Date__c.field-meta.xml
<CustomField>
    <fullName>Answer_Date__c</fullName>
    <description>The date on which question is answered by customer</description>
    <label>Answer Date</label>
    <type>DateTime</type>
</CustomField>