force-app/main/default/objects/phsCheckInConversation__c/fields/isAnswered__c.field-meta.xml
<CustomField>
    <fullName>isAnswered__c</fullName>
    <formula>IF(IsBLANK(Answer__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAnswered</label>
    <type>Checkbox</type>
</CustomField>