force-app/main/default/objects/phsCheckInConversation__c/fields/Question_Date__c.field-meta.xml
<CustomField>
    <fullName>Question_Date__c</fullName>
    <description>The date on which question is asked</description>
    <label>Question Date</label>
    <type>DateTime</type>
</CustomField>